--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://cipher31.github.io/website_portfolio",
   "dependencies": {
     "gh-pages": "^4.0.0",
     "node-sass": "^6.0.1"
   },
   "devDependencies": {},
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive", 
+    "deploy":"gh-pages -d dist"
   },
   "author": "kaustubh tripathi",
   "license": "MIT"
